--- a/mockup/submit.html
+++ b/mockup/submit.html
@@ -43,6 +43,9 @@
 			</div>
 		</header>
 	<section class="ph3 ph5-ns pv5" style="max-width: 66rem;">
+			<div class="dt-ns dt--fixed-ns w-100">
+				<h1>Write your story</h1>
+			</div>
 		<article class="mw8 center br2 ba b--light-blue bg-lightest-blue">
 			<div class="dt-ns dt--fixed-ns w-100">
 				<div class="pa3 pa4-ns dtc-ns v-mid">
@@ -54,8 +57,6 @@
 				<div class="pa3 pa4-ns dtc-ns v-mid">
 					<a href="#" class="no-underline f6 tc db w-100 pv3 bg-animate bg-blue hover-bg-dark-blue white br2">Submit story</a>
 				</div>
-			</div>
-			<div class="dt-ns dt--fixed-ns w-100">
 			</div>
 		</article>
 		<br>
