Show buttons until much smaller

--- a/mockup/index.html
+++ b/mockup/index.html
@@ -31,15 +31,15 @@
 								<i data-feather="edit-2" class="dib h1 w1"></i>
 								<span class="f6 pr2">Write</span>
 							</a>
-							<a class="f6 fw4 hover-white no-underline white-70 dn dib-l pv2 ph1" href="/">
+							<a class="f6 fw4 hover-white no-underline white-70 dn dib-l dib-m pv2 ph1" href="/">
 								<i data-feather="layers" class="dib h1 w1"></i>
 								<span class="f6 pr2">Archive</span>
 							</a>
-							<a class="f6 fw4 hover-white no-underline white-70 dn dib-l pv2 ph1" href="/">
+							<a class="f6 fw4 hover-white no-underline white-70 dn dib-l dib-m pv2 ph1" href="/">
 								<i data-feather="help-circle" class="dib h1 w1"></i>
 								<span class="f6 pr2">About</span>
 							</a>
-							<a class="f6 fw4 hover-white no-underline white-70 dn dib-l ml2 pv2 ph3 ba" href="/" >Sign In</a>
+							<a class="f6 fw4 hover-white no-underline white-70 dn dib-l dib-m ml2 pv2 ph3 ba" href="/" >Sign In</a>
 						</div>
 					</nav>
 				</div>
