--- a/mockup/index.html
+++ b/mockup/index.html
@@ -2,20 +2,13 @@
 <html lang="en">
 	<title> </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
 	<link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
 	<link rel="stylesheet" href="css/style.css">
-	<style>
-	.myimg svg {
-		display: inline-block;
-	width: 100%;
-	height: 100%
-	}
-	</style>
+	<script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
 	<body>
 		<header class="sans-serif">
-			<div class="cover bg-left bg-center-l" >
-				<div class="bg-black-80  ph5-ns">
+			<div class="cover bg-left bg-center-l" style="background-image: url(https://schollz.github.io/img/bisons.jpg)">
+				<div class="bg-black-80 pb5 pb6-m pb7-l ph5-ns">
 					<nav class="dt w-100" style="max-width: 58rem;">
 						<div class="dtc w2 v-mid pa3">
 							<a href="/" class="dib w2 h2 pa1 ba b--white-90 grow-large border-box">
@@ -31,71 +24,108 @@
 								<i data-feather="edit-2" class="dib h1 w1"></i>
 								<span class="f6 pr2">Write</span>
 							</a>
-							<a class="f6 fw4 hover-white no-underline white-70 dn dib-l dib-m pv2 ph1" href="/">
+							<a class="f6 fw4 hover-white no-underline white-70 dn dib-l pv2 ph1" href="/">
 								<i data-feather="layers" class="dib h1 w1"></i>
 								<span class="f6 pr2">Archive</span>
 							</a>
-							<a class="f6 fw4 hover-white no-underline white-70 dn dib-l dib-m pv2 ph1" href="/">
+							<a class="f6 fw4 hover-white no-underline white-70 dn dib-l pv2 ph1" href="/">
 								<i data-feather="help-circle" class="dib h1 w1"></i>
 								<span class="f6 pr2">About</span>
 							</a>
-							<a class="f6 fw4 hover-white no-underline white-70 dn dib-l dib-m ml2 pv2 ph3 ba" href="/" >Sign In</a>
+							<a class="f6 fw4 hover-white no-underline white-70 dn dib-l ml2 pv2 ph3 ba" href="/" >Sign In</a>
 						</div>
 					</nav>
+					<div class="mt4 mt5-m mt6-l ph3" style="max-width: 58rem;">
+						<h1 class="f2 f1-l fw2 white-90 mb0 lh-title">I'm <span id="js-rotating">John, Jane</span> Doe</h1>
+						<h2 class="fw1 f3 white-80 mt3 mb4">Beautifully written stories from real anonymous people</h2>
+						<a class="f6 no-underline grow dib v-mid bg-blue white ba b--blue ph4 pv3 mb3" href="/" style="font-size: 120%;"><strong>Read stories</strong></a>
+						<span class="dib v-mid ph3 white-70 mb3">or</span>
+						<a class="f6 no-underline grow dib v-mid white ba b--white ph4 pv3 mb3" href="" style="font-size: 120%;"><strong>Write stories</strong></a>
+					</div>
 				</div>
 			</div>
 		</header>
-		<article class="cf ph3 ph5-ns pv5 mw8">
-			<header class="fn fl-ns w-50-ns pr4-ns">
-				<h1 class="mb3 mt0 lh-title">Stolen</h1>
-				<time class="f6 ttu tracked gray">-Zack</time>
-			</header>
-			<div class="fn fl-ns w-50-ns">
-				<p class="lh-copy measure mt4 mt0-ns">
-					On Wednesday, after work, in 2010, I went to get my bike to ride home. My brand new gray-and-red racing bike. It had bright red tires and red bar-tape. It looked and fast and it was fast. But, I glanced to where my bike should be and noticed my bike was gone. There was a piece of Velcro from my bike lock in the place my bike had been. Stolen, I thought. The Velcro could only come off if the bike lock had been cut. I called the police. They weren't interested. Lots of bikes go missing and they are impossible to get back, they said.
-				</p>
-				<p class="lh-copy measure">
-					I ran home. I got onto my computer. Maybe my bike would be on Craigslist? Probably not. I looked, and sure enough, I found my bike for sale on Craigslist! I called the police again and told them the good news. Unfortunately, they told me the bike is most certainly not mine and that it was not worth pursuing. I told them I had the original receipt for the bike with the serial number, and it would take only a second to compare it to the stolen bike. The police still were not interested. I went for another run to clear my mind, but I couldn't stop thinking about how to get my bike back. I decided to act, on my own.
-				</p>
-				<p class="lh-copy measure">
-					I ran home. I got onto my computer. Maybe my bike would be on Craigslist? Probably not. I looked, and sure enough, I found my bike for sale on Craigslist! I called the police again and told them the good news. Unfortunately, they told me the bike is most certainly not mine and that it was not worth pursuing. I told them I had the original receipt for the bike with the serial number, and it would take only a second to compare it to the stolen bike. The police still were not interested. I went for another run to clear my mind, but I couldn't stop thinking about how to get my bike back. I decided to act, on my own.
-				</p>
-				<p class="lh-copy measure">
-					I ran home. I got onto my computer. Maybe my bike would be on Craigslist? Probably not. I looked, and sure enough, I found my bike for sale on Craigslist! I called the police again and told them the good news. Unfortunately, they told me the bike is most certainly not mine and that it was not worth pursuing. I told them I had the original receipt for the bike with the serial number, and it would take only a second to compare it to the stolen bike. The police still were not interested. I went for another run to clear my mind, but I couldn't stop thinking about how to get my bike back. I decided to act, on my own.
-				</p>
-				<p class="lh-copy measure">
-					I went to Walmart and bought a burn phone. While I was in the checkout line I made some fake personas complete with backstories and email addresses - James Hannover and Mathew Phillipe. My backstory for James Hannover was a that he was a relatively new student to NCSU who works at a pizzeria and is interested in doing triathlons. For Mathew Phillipe the backstory was that he was a Durhamite who loved soccer and was looking to race his friend on Tobacco Road.
-				</p>
-			</div>
+
+    <link rel="stylesheet" href="http://cdn.jsdelivr.net/animatecss/3.4.0/animate.min.css">
+    <link rel="stylesheet" href="http://morphext.fyianlai.com/assets/css/morphext.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="http://morphext.fyianlai.com/assets/js/morphext.js"></script>
+    <script>
+    $("#js-rotating").Morphext({
+    // The [in] animation type. Refer to Animate.css for a list of available animations.
+    animation: "flash",
+    // An array of phrases to rotate are created based on this separator. Change it if you wish to separate the phrases differently (e.g. So Simple | Very Doge | Much Wow | Such Cool).
+    separator: ",",
+    // The delay between the changing of each phrase in milliseconds.
+    speed: 2000,
+    complete: function () {
+        // Called after the entrance animation is executed.
+    }
+});
+    </script>
+<br>
+<article data-name="article-full-bleed-background" class="ph5-ns" style="max-width: 67rem;">
+  <div class="cf" style="background: url(back1.jpg) no-repeat center center fixed; background-size: cover; ">
+    <div class="fl pa3 bg-white black-70 measure-narrow f3">
+      <header class="bb b--black-70 pv4">
+        <h3 class="f2 fw7 ttu tracked lh-title mt0 mb3 avenir">Our mission</h3>
+      </header>
+      <section class="pt5 pb4">
+
+   <p class="f5 lh-copy measure-wide">
+     Typography has one plain duty before it and that is to convey information
+     in writing. No argument or consideration can absolve typography from this
+     duty. A printed work which cannot be read becomes a product without
+     purpose.
+   </p>
+   <p class="f4 lh-copy measure">
+     Typography has one plain duty before it and that is to convey information
+     in writing. No argument or consideration can absolve typography from this
+     duty. A printed work which cannot be read becomes a product without
+     purpose.
+   </p>
+   <p class="f5 lh-copy measure-wide">
+     Typography has one plain duty before it and that is to convey information
+     in writing. No argument or consideration can absolve typography from this
+     duty. A printed work which cannot be read becomes a product without
+     purpose.
+   </p>
+
+      </section>
+    </div>
+  </div>
+</article>
+
+		<article class="pa3 pa5-ns sans-serif" data-name="slab-stat">
+			<dl class="dib mr5">
+				<dd class="f6 f5-ns b ml0">Current Open Topic</dd>
+				<dd class="f3 f2-ns b ml0">Animals</dd>
+			</dl>
+			<dl class="dib mr5">
+				<dd class="f6 f5-ns b ml0">Stories</dd>
+				<dd class="f3 f2-ns b ml0">2</dd>
+			</dl>
+			<dl class="dib mr5">
+				<dd class="f6 f5-ns b ml0">Topic closes</dd>
+				<dd class="f3 f2-ns b ml0">10-31</dd>
+			</dl>
+			<dl class="dib mr5">
+				<dd class="f6 f5-ns b ml0">Days Left</dd>
+				<dd class="f3 f2-ns b ml0">4</dd>
+			</dl>
 		</article>
-		<div class="flex items-center justify-center pa4">
-			<a href="#0" class="f5 no-underline black bg-animate hover-bg-black hover-white inline-flex items-center pa3 ba border-box mr4">
-				<svg class="w1" data-icon="chevronLeft" viewBox="0 0 32 32" style="fill:currentcolor">
-					<title>chevronLeft icon</title>
-				<path d="M20 1 L24 5 L14 16 L24 27 L20 31 L6 16 z"></path>
-			</svg>
-			<span class="pl1">Previous</span>
-		</a>
-		<a href="#0" class="f5 no-underline black bg-animate hover-bg-black hover-white inline-flex items-center pa3 ba border-box">
-			<span class="pr1">Next</span>
-			<svg class="w1" data-icon="chevronRight" viewBox="0 0 32 32" style="fill:currentcolor">
-				<title>chevronRight icon</title>
-			<path d="M12 1 L26 16 L12 31 L8 27 L18 16 L8 5 z"></path>
-		</svg>
-	</a>
-</div>
-<footer class="ph3 ph4-ns pv6 bt b--black-10 black-70">
-	<a href="mailto:" class="link b f3 f2-ns dim black-70 lh-solid">seven million stories</a>
-	<p class="f6 db b ttu lh-solid">© 2016 COMPANY Inc.</p>
-	<div class="mt5">
-		<a href="/language/" title="Language" class="f6 dib pr2 mid-gray dim">Language</a>
-		<a href="/terms/"    title="Terms" class="f6 dib ph2 mid-gray dim">Terms of Use</a>
-		<a href="/privacy/"  title="Privacy" class="f6 dib pl2 mid-gray dim">Privacy</a>
-		<a href="/privacy/"  title="Privacy" class="f6 dib pl2 mid-gray dim">Submit your story</a>
-	</div>
-</footer>
-<script>
-feather.replace()
-</script>
-</body>
+		<footer class="ph3 ph4-ns pv6 bt b--black-10 black-70">
+			<a href="mailto:" class="link b f3 f2-ns dim black-70 lh-solid">seven million stories</a>
+			<p class="f6 db b ttu lh-solid">© 2016 COMPANY Inc.</p>
+			<div class="mt5">
+				<a href="/language/" title="Language" class="f6 dib pr2 mid-gray dim">Language</a>
+				<a href="/terms/"    title="Terms" class="f6 dib ph2 mid-gray dim">Terms of Use</a>
+				<a href="/privacy/"  title="Privacy" class="f6 dib pl2 mid-gray dim">Privacy</a>
+				<a href="/privacy/"  title="Privacy" class="f6 dib pl2 mid-gray dim">Submit your story</a>
+			</div>
+		</footer>
+		<script>
+		feather.replace()
+		</script>
+	</body>
 </html>
